--- a/styles.css
+++ b/styles.css
@@ -112,13 +112,14 @@ body {
 
 }
 
-@media (min-width: 10px) and (max-width: 512px) {
+@media (max-width: 512px) {
 
     .nav-links li:nth-child(5),
     .nav-links li:nth-child(1) {
         display: none;
     }
 }
+
 
 
 
