--- a/styles.css
+++ b/styles.css
@@ -183,8 +183,8 @@ img.img2 {
     img.img2 {
         position: absolute;
         display: block;
-        
-        object-position: bottom;
+        height: 54rem;
+        width: auto;
         z-index: -1;
         inset: auto 0 0 0;
     }
