--- a/styles.css
+++ b/styles.css
@@ -237,11 +237,13 @@ img.office-img {
         gap: 2rem;
     }
 
+    body {
+        position: relative;
+    }
+
     .svg-img {
         aspect-ratio: 1438/546;
         position: absolute;
-        bottom: 0;
-        right: 0;
         max-width: 100%;
         height: auto;
         z-index: -1;
@@ -250,7 +252,6 @@ img.office-img {
     .img2 {
         max-width: 100%;
         max-height: 100%;
-        object-position: bottom;
     }
 
     .title-1 {
