--- a/styles.css
+++ b/styles.css
@@ -98,6 +98,7 @@ body {
 .showcase {
     /*   position: relative; */
     max-height: 79rem;
+    margin-bottom:8rem ;
 
 }
 
@@ -130,9 +131,12 @@ body {
 }
 
 p {
-    font-size: 1.4rem;
-    line-height: 2;
+    font-size: 1.2rem;
+    line-height: 1.8;
     font-weight: 400;
+    text-align: center;
+    justify-self: center;
+    width: 85%;
 }
 
 .btn {
@@ -150,46 +154,12 @@ p {
     font-weight: 500;
 }
 
-/* .svg-img {
-    position: absolute;
-    min-width: 100%;
-    z-index: -1;
-}
-
-.img2 {
-    max-width: 100%;
-    max-height: 100%;
-}
- */
-
-.dots-img {
-    position: absolute;
-    top: -0.4rem;
-}
-
-.cnt-img {
-    position: relative;
-    width: 80%;
-    aspect-ratio: 2/1;
-}
-
-img.office-img {
-    width: 100%;
-    height: 100%;
-}
-
-/* DIRHA F SVG
- */
-
-.cnt-blindman {
-    display: none;
-}
 
 .svg-img {
     position: absolute;
     width: 100%;
     z-index: -1;
-    top: 50rem;
+    top: 44rem;
     justify-self: center;
 }
 
@@ -197,6 +167,71 @@ img.office-img {
     width: 100%;
     height: 100%;
 }
+
+
+.cnt-img {
+    position: relative;
+    padding-right: 10rem;
+    aspect-ratio: 2/1;
+    margin-bottom: 8rem;
+}
+
+.p-title{
+    font-size: 2rem;
+    width: 90%;
+    justify-self: center;
+    text-align: center;
+    line-height: 1.8;
+    font-weight: 600;
+}
+.cnt-office {
+    aspect-ratio: 934/462;
+    position: absolute;
+    width: 84%;
+    height: auto;
+    object-fit:cover;
+    bottom: 0;
+}
+
+
+img.office-img {
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
+}
+
+
+.service-h2{
+    justify-self: center;
+    text-align: center;
+    width: 80%;
+    font-size: 1.6rem;
+    line-height: 1.8;
+    font-weight: 600;
+}
+
+.service-para{
+    display: none;
+}
+.cnt-blindman {
+    display: none;
+}
+
+.cnt-dots{
+    aspect-ratio: 196/154;
+    position: absolute;
+    top:0; 
+    right: 0;
+    width: 20%;
+    object-fit: fill;
+    z-index: -1;
+    transform: translate(-40%, 12%);
+}
+.dots-img{
+    width: 100%;
+    height: 100%;
+}
+   
 
 
 
@@ -232,18 +267,37 @@ img.office-img {
         display: block;
     }
 
+    .nav-links {
+        display: flex;
+        gap: 7.1rem;
+        height: 7rem;
+        align-items: center;
+        margin-right: 3rem;
+    }
+
     .cnt-blindman {
         display: block;
+        width: 50%;
+    }
+
+    .blindman {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 
     .showcase {
         display: flex;
         padding-top: 2.4rem;
-        padding-right: 7rem;
-        padding-left: 7rem;
+        justify-content: space-evenly;
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+        gap: 2rem;
     }
 
     .cnt-showcase {
+        width: 50%;
         display: flex;
         flex-direction: column;
         gap: 2rem;
@@ -256,10 +310,14 @@ img.office-img {
 
     .svg-img {
         position: absolute;
-        width: 80%;
+        aspect-ratio: 675/590;
+        object-fit: cover;
+        margin-left: auto;
+        margin-right:auto;
+        width: 94%;
+        height: 80%;
         z-index: -1;
         top: 23rem;
-        justify-self: center;
     }
 
     .img2 {
