--- a/styles.css
+++ b/styles.css
@@ -1,441 +1,501 @@
 html {
-    font-size: 62.5%;
+  font-size: 62.5%;
 
-    /* 16px base so 1rem = 16px */
+  /* 16px base so 1rem = 16px */
 }
-
 
 *,
 *::before,
 *::after {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .wrapper {
-    max-width: 144rem;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 8rem;
+  max-width: 144rem;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 8rem;
 }
 
 body {
-    margin: 0;
-    font-family: 'Poppins', sans-serif;
+  margin: 0;
+  font-family: "Poppins", sans-serif;
 }
 
 .section-header {
-
-    background-color: #DF7C14;
+  background-color: #df7c14;
 }
-.li:hover{
-    cursor: pointer;
+.li:hover {
+  cursor: pointer;
 }
 .header {
-    max-width: 144rem;
-    height: 7rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-left: auto;
-    margin-right: auto;
+  max-width: 144rem;
+  height: 7rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-
-
 .nav-links {
-    display: flex;
-    gap: 5.1rem;
-    height: 7rem;
-    align-items: center;
-    margin-right: 3rem;
+  display: flex;
+  gap: 5.1rem;
+  height: 7rem;
+  align-items: center;
+  margin-right: 3rem;
 }
 
 .header a.logo {
-    font-size: 2.8rem;
-    color: white;
-    padding-left: 3rem;
-    text-decoration: none;
+  font-size: 2.8rem;
+  color: white;
+  padding-left: 3rem;
+  text-decoration: none;
 }
 
 .nav-links a {
-    color: white;
-    font-size: 1.45rem;
-    font-weight: 500;
-    text-decoration: none;
-
+  color: white;
+  font-size: 1.45rem;
+  font-weight: 500;
+  text-decoration: none;
 }
 
 .nav-links li {
-    list-style: none;
+  list-style: none;
 }
 
-
 .nav-links a.contact {
-    display: block;
-    background: white;
-    color: #DC7000;
-    border-radius: 0.6rem;
-    padding: 1rem 2.4rem;
+  display: block;
+  background: white;
+  color: #dc7000;
+  border-radius: 0.6rem;
+  padding: 1rem 2.4rem;
 }
 
 .burger {
-    display: none;
+  display: none;
 }
 
 .burger img {
-    width: 3rem;
-    height: 3rem;
-    filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(0deg);
+  width: 3rem;
+  height: 3rem;
+  filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(0deg);
 }
 
 .nav-links li:nth-child(2),
 .nav-links li:nth-child(3),
 .nav-links li:nth-child(4) {
-    display: none;
+  display: none;
 }
 
 .burger {
-    display: block;
-    padding-right: 3rem;
+  display: block;
+  padding-right: 3rem;
 }
 
 .showcase {
-    max-height: 79rem;
-    margin-bottom:8rem ;
-
+  max-height: 79rem;
+  margin-bottom: 8rem;
 }
 
 .cnt-showcase {
-    position: relative;
-    min-width: 26rem;
-    max-width: 47rem;
-    display: flex;
-    flex-direction: column;
-    margin: 0 auto;
-    gap: 2rem;
-    padding-left: 3rem;
-    padding-right: 3rem;
-    padding-top: 10rem;
+  position: relative;
+  min-width: 26rem;
+  max-width: 47rem;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  gap: 2rem;
+  padding-left: 3rem;
+  padding-right: 3rem;
+  padding-top: 10rem;
 }
 
 .title-1 {
-    font-size: 1.6rem;
-    font-weight: 700;
-    margin: 0;
-    line-height: 1.56;
-    color: #E87D0E;
+  font-size: 1.6rem;
+  font-weight: 700;
+  margin: 0;
+  line-height: 1.56;
+  color: #e87d0e;
 }
 
 .title-2 {
-
-    font-size: 3.3rem;
-    font-weight: 800;
-    margin: 0;
+  font-size: 3.3rem;
+  font-weight: 800;
+  margin: 0;
 }
 
 p {
-    font-size: 1.2rem;
-    line-height: 1.8;
-    font-weight: 400;
-    text-align: center;
-    justify-self: center;
-    width: 85%;
+  font-size: 1.2rem;
+  line-height: 1.8;
+  font-weight: 400;
+  text-align: center;
+  justify-self: center;
+  width: 85%;
 }
 
 .btn {
-    border-radius: 3rem;
-    background-color: #DF7C14;
-    color: white;
-    border: none;
-    cursor: pointer;
-    padding: 1.4rem 1.4rem;
-    width: max-content;
+  border-radius: 3rem;
+  background-color: #df7c14;
+  color: white;
+  border: none;
+  cursor: pointer;
+  padding: 1.4rem 1.4rem;
+  width: max-content;
 }
 
 .btn-style {
-    font-size: 1.5rem;
-    font-weight: 500;
+  font-size: 1.5rem;
+  font-weight: 500;
 }
 
-
 .svg-img {
-    aspect-ratio: 1438/547;
-    position: absolute;
-    width: 100%;
-    z-index: -1;
-    top: 44rem;
-    justify-self: center;
+  aspect-ratio: 1438/547;
+  position: absolute;
+  width: 100%;
+  z-index: -1;
+  top: 44rem;
+  justify-self: center;
 }
 
 .img2 {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
-
 
 .cnt-img {
-    position: relative;
-    padding-right: 10rem;
-    aspect-ratio: 2/1;
-    margin-bottom: 8rem;
+  position: relative;
+  padding-right: 10rem;
+  aspect-ratio: 2/1;
+  margin-bottom: 8rem;
 }
 
-.p-title{
-    font-size: 2rem;
-    width: 90%;
-    justify-self: center;
-    text-align: center;
-    line-height: 1.8;
-    font-weight: 600;
+.p-title {
+  font-size: 2rem;
+  width: 90%;
+  justify-self: center;
+  text-align: center;
+  line-height: 1.8;
+  font-weight: 600;
 }
 .cnt-office {
-    aspect-ratio: 934/462;
-    position: absolute;
-    width: 84%;
-    height: auto;
-    object-fit:cover;
-    bottom: 0;
+  aspect-ratio: 934/462;
+  position: absolute;
+  width: 84%;
+  height: auto;
+  object-fit: cover;
+  bottom: 0;
 }
-
 
 img.office-img {
-    width: 100%;
-    height: 100%;
-    border-radius: 8px;
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
 }
 
-
-.service-h2{
-    justify-self: center;
-    text-align: center;
-    width: 80%;
-    font-size: 1.6rem;
-    line-height: 1.8;
-    font-weight: 600;
+.service-h2 {
+  justify-self: center;
+  text-align: center;
+  width: 80%;
+  font-size: 1.6rem;
+  line-height: 1.8;
+  font-weight: 600;
 }
 
-.service-para{
-    display: none;
+.service-para {
+  display: none;
 }
 .cnt-blindman {
-    display: none;
+  display: none;
 }
 
-.cnt-dots{
-    aspect-ratio: 196/154;
-    position: absolute;
-    top:0;
-    right: 0;
-    width: 20%;
-    object-fit: fill;
-    z-index: -1;
-    transform: translate(-40%, 12%);
+.cnt-dots {
+  aspect-ratio: 196/154;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 20%;
+  object-fit: fill;
+  z-index: -1;
+  transform: translate(-40%, 12%);
 }
-.dots-img{
-    width: 100%;
-    height: 100%;
-}
-
-
-.h1-descktop{
-    display: none;
+.dots-img {
+  width: 100%;
+  height: 100%;
 }
 
-.service-btns{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 6.5rem;
+.h1-descktop {
+  display: none;
 }
 
-.btn-s{
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-border-style: none;
-background: none;
-cursor: pointer;
-min-width: 25rem;
+.service-btns {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 6.5rem;
 }
 
-.icon-style{
-background-color:rgba(220, 112, 0, 0.09);
-border-radius: 32px;
-width: 64px;
-height: 64px;
-align-content: center;
+.btn-s {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-style: none;
+  background: none;
+  cursor: pointer;
+  min-width: 25rem;
 }
 
-.p-btn{
-    font-size: 1.6rem;
-    white-space: nowrap;
+.icon-style {
+  background-color: rgba(220, 112, 0, 0.09);
+  border-radius: 32px;
+  width: 64px;
+  height: 64px;
+  align-content: center;
 }
 
+.p-btn {
+  font-size: 1.6rem;
+  white-space: nowrap;
+}
 
-.btn-s:hover .icon-style{
-    background-color: #cf6b0032;
-    transition: background-color 0.3s ease;
+.btn-s:hover .icon-style {
+  background-color: #cf6b0032;
+  transition: background-color 0.3s ease;
 }
-.btn-s:hover .p-btn{
-    color: #E87D0E;
-    transition: color 0.3s ease;
+.btn-s:hover .p-btn {
+  color: #e87d0e;
+  transition: color 0.3s ease;
 }
-.btn-s:hover .arrow img{
-    transform: translateX(5px);
-    transition: transform 0.3s ease;
+.btn-s:hover .arrow img {
+  transform: translateX(5px);
+  transition: transform 0.3s ease;
+}
+.cards-wrapper {
+  background-color: #f5f5f5;
+  height: 71rem;
+  padding-top: 6.9rem;
+}
+.cards-sections {
+  max-width: 80%;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  gap: 3rem;
+}
+.h3-cards-section {
+  font-size: 2rem;
+  line-height: 1.8;
+  font-weight: 600;
+  text-align: left;
+  margin: 0;
+}
+.h3-cards {
+  font-size: 1.7rem;
+  line-height: 1.8;
+  font-weight: 500;
+  text-align: left;
+  margin: 0;
+}
+.p-cards-section {
+  font-size: 1.4rem;
+  margin-right: auto;
+  line-height: 1.8;
+  font-weight: 400;
+  text-align: left;
+  margin-bottom: 2rem;
+  margin: 0;
+}
+.cards {
+  display: flex;
+  border-radius: 16px;
+  flex-direction: column;
+  margin: 0 auto;
+  align-items: left;
+  gap: 2rem;
+  background-color: white;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  padding-left: 3rem;
+}
+.p-cards {
+  border-radius: 6px;
+  background-color: aquamarine;
+  line-height: 1.5;
+  font-size: medium;
+  width: fit-content;
+}
+.pcards {
+  text-align: left;
+  margin: 0;
+}
+.cards-btn {
+  border-radius: 3rem;
+  color: #dc7000;
+  background-color: white;
+  border: none;
+  cursor: pointer;
+  padding: 1rem 2rem;
+  width: max-content;
+  margin-left: auto;
+}
+.arrow {
+  width: 10px;
+  height: auto;
+}
+.cards-btn:hover .arow img {
+  transform: translateX(5px);
+  transition: transform 0.3s ease;
+}
+.cards-btn:hover .RM-btn {
+  color: #af6300;
+  transition: color 0.3s ease;
 }
 
 @media (min-width: 513px) {
-    .nav-links li:nth-child(3) {
-        display: block;
-    }
+  .nav-links li:nth-child(3) {
+    display: block;
+  }
 
-    .burger {
-        display: none;
-    }
-
+  .burger {
+    display: none;
+  }
 }
 
 @media (max-width: 512px) {
-
-    .nav-links li:nth-child(5),
-    .nav-links li:nth-child(1) {
-        display: none;
-    }
+  .nav-links li:nth-child(5),
+  .nav-links li:nth-child(1) {
+    display: none;
+  }
 }
 
 @media (min-width: 630px) {
-    .nav-links li:nth-child(2) {
-        display: block;
-    }
+  .nav-links li:nth-child(2) {
+    display: block;
+  }
 }
-
-
 
 @media (min-width: 720px) {
-    .nav-links li:nth-child(4) {
-        display: block;
-    }
+  .nav-links li:nth-child(4) {
+    display: block;
+  }
 
-    .nav-links {
-        display: flex;
-        gap: 7.1rem;
-        height: 7rem;
-        align-items: center;
-        margin-right: 3rem;
-    }
+  .nav-links {
+    display: flex;
+    gap: 7.1rem;
+    height: 7rem;
+    align-items: center;
+    margin-right: 3rem;
+  }
 
-    .showcase {
-        display: flex;
-        padding-top: 2.4rem;
-        justify-content: space-evenly;
-        max-width: 90%;
-        margin-left: auto;
-        margin-right: auto;
-        gap: 2rem;
-    }
+  .showcase {
+    display: flex;
+    padding-top: 2.4rem;
+    justify-content: space-evenly;
+    max-width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    gap: 2rem;
+  }
 
-    .cnt-blindman {
-        display: block;
-        aspect-ratio: 675/590;
-        max-width: 50%;
-        min-width: 50%;
-    }
+  .cnt-blindman {
+    display: block;
+    aspect-ratio: 675/590;
+    max-width: 50%;
+    min-width: 50%;
+  }
 
-    .blindman {
-        width: 100%;
-        object-fit:scale-down;
-    }
+  .blindman {
+    width: 100%;
+    object-fit: scale-down;
+  }
 
-
-    .service{
-        margin-top: 23rem;
-        margin-bottom: 15rem;
-        width:80%;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    .cnt-showcase {
-        display: flex;
-        flex-direction: column;
-        gap: 2rem;
-        padding-left: 2rem;
-        padding-right:2rem;
-         max-width: 50%;
-        min-width: 50%;
-    }
-.cnt-img{
-   margin-bottom: 15rem;
-}
-    body {
-        position: relative;
-    }
-.service-para{
+  .service {
+    margin-top: 23rem;
+    margin-bottom: 15rem;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .cnt-showcase {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    max-width: 50%;
+    min-width: 50%;
+  }
+  .cnt-img {
+    margin-bottom: 15rem;
+  }
+  body {
+    position: relative;
+  }
+  .service-para {
     display: block;
     text-align: left;
     justify-self: left;
     width: 47%;
-}
+  }
 
-    .svg-img {
-        position: absolute;
-        aspect-ratio: 1438/547;
-        max-width: fit-content;
-        object-fit: cover;
-        margin-left: auto;
-        margin-right:auto;
-        z-index: -1;
-        top: 23rem;
-    }
+  .svg-img {
+    position: absolute;
+    aspect-ratio: 1438/547;
+    max-width: fit-content;
+    object-fit: cover;
+    margin-left: auto;
+    margin-right: auto;
+    z-index: -1;
+    top: 23rem;
+  }
 
-    .img2 {
-        width: 100%;
-        height: 100%;
-    }
+  .img2 {
+    width: 100%;
+    height: 100%;
+  }
 
-    .title-1 {
-        font-size: 1.8rem;
-        font-weight: 700;
-        line-height: 1.56;
-        color: #E87D0E;
-    }
+  .title-1 {
+    font-size: 1.8rem;
+    font-weight: 700;
+    line-height: 1.56;
+    color: #e87d0e;
+  }
 
-    .title-2 {
+  .title-2 {
+    font-size: 5rem;
+    font-weight: 900;
+    line-height: 1.56;
+  }
 
-        font-size: 5rem;
-        font-weight: 900;
-        line-height: 1.56;
-    }
-
-    p {
-        font-size: 1.6rem;
-        line-height: 2;
-        font-weight: 400;
-    }
-.p-showcase{
+  p {
+    font-size: 1.6rem;
+    line-height: 2;
+    font-weight: 400;
+  }
+  .p-showcase {
     width: 100%;
     text-align: left;
-}
+  }
 
-.service-h2{
+  .service-h2 {
     justify-self: center;
     text-align: center;
     width: 60%;
     font-size: 2.5rem;
     line-height: 1.8;
     font-weight: 600;
-}
+  }
 
-.service-btns{
+  .service-btns {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 6.5rem;
-}
+    gap: 2.5rem;
+  }
 
-/* .btn-s{
+  /* .btn-s{
 display: flex;
 flex-direction: column;
 justify-content: center;
