--- a/styles.css
+++ b/styles.css
@@ -273,8 +273,9 @@ img.office-img {
 }
 .cards-wrapper {
   background-color: #f5f5f5;
-  height: 74rem;
+  height: 78rem;
   padding-top: 6.9rem;
+  margin-bottom: 8rem;
 }
 .cards-sections {
   position: relative;
@@ -387,6 +388,39 @@ img.office-img {
 .cycle:hover {
   background-color: #d7d7d7; /* hover effect */
   transform: scale(1.1); /* slight zoom */
+}
+
+.h2-images {
+  justify-self: center;
+  text-align: center;
+  font-size: 2rem;
+  line-height: 1.8;
+  font-weight: 600;
+  width: 80%;
+  margin: 0;
+}
+.images-flex {
+  display: flex;
+  flex-direction: column;
+  justify-self: center;
+  min-width: 300px;
+  max-width: 85%;
+  align-items: center;
+  gap: 3rem;
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+}
+.i-img {
+  max-width: 100%;
+  object-fit: cover;
+}
+.images-flex img {
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+}
+.img4 {
+  display: none;
 }
 
 @media (min-width: 513px) {
@@ -560,5 +594,29 @@ img.office-img {
     right: 0;
     top: -1.6rem;
     margin-right: 3rem;
+  }
+  .img4 {
+    display: block;
+  }
+  .images-flex {
+    display: flex;
+    flex-direction: row;
+    max-width: 100%;
+    justify-content: center;
+    align-items: baseline;
+    flex-wrap: wrap;
+    gap: 3rem;
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+  }
+
+  .i-img {
+    max-width: 100%;
+    object-fit: cover;
+  }
+  .images-flex img {
+    width: auto;
+    height: 223px;
+    border-radius: 5px;
   }
 }
